# reddit-wallpapers

./: .gitignore  README.md  config.json  fetch.bat  wallpaper_fetcher.py
win32/: CMakeLists.txt  README.md  build.ps1  config.json  generate_icon.py  prompt.txt
win32/resources/: app.rc
win32/src/: main.cpp
